add type and enum
